[package]
name = "mock"
version = "0.1.0"
edition = "2021"
description = "A reference implementation of siling only made for tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.7.1"
async-trait = "0.1.58"
futures = "0.3.25"
siling = { path = "../siling", features = ["tests"] }
thiserror = "1.0.37"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }
