[package]
name = "mock"
version = "0.1.0"
edition = "2021"
description = "A reference implementation of siling only made for tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.4.1"
async-trait = "0.1.58"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.25"
siling = { path = "../siling", features = ["tests"] }
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }
