[package]
name = "siling-traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
chrono = "0.4.23"
futures = "0.3.25"
serde = "1.0.147"
test_macros = { path = "../test_macros", optional = true }

[features]
tests = ["dep:test_macros"]
